--- a/SCFrontEnd/src/Styles/Login.css
+++ b/SCFrontEnd/src/Styles/Login.css
@@ -1,7 +1,15 @@
 /* Estilos para el contenedor del formulario de inicio de sesión */
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
 .login-container {
     width: 300px;
-    margin: 0 auto;
+    margin: 100px auto 40px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
