--- a/SCFrontEnd/src/Styles/Registro.css
+++ b/SCFrontEnd/src/Styles/Registro.css
@@ -1,52 +1,89 @@
-.registro {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .registro h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .registro form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .registro label {
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .registro input {
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 16px;
-  }
-  
-  .registro button {
-    background-color: green;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 3px;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  
-  .registro button:hover {
-    background-color: #0056b3;
-  }
-  
+/* Estilos para centrar solo el contenedor del formulario */
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
 
-  /* Estilos CSS para los combobox */
+.registro {
+  max-width: 700px;
+  margin: 20px auto 40px;
+  margin-right: 190px;
+  padding: 20px;
+  /*border: 1px solid transparent; */
+  border: 2px solid #1758e694;
+  border-radius: 5px;
+  /*background-color: transparent;*/
+  background-color: #fff;
+ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 0 30px rgba(36, 35, 35, 0.3);
+  cursor: default;
+  transition: all 400ms ease;
+
+  height: 555px; 
+}
+
+.registro h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.registro form {
+  display: grid; 
+  grid-template-columns: 1fr 1fr; 
+  grid-gap: 20px; 
+  
+}
+
+.registro label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.registro input {
+  padding: 0; /* Elimina el espacio interno */
+  border: none; /* Elimina el borde */
+  border-bottom: 1px solid #ccc; /* Agrega una línea inferior */
+  background: transparent; /* Fondo transparente */
+  font-size: 15px;
+  width: 90%;
+  height: 20px;
+  outline: none; /* Elimina el contorno al enfocar */
+}
+
+
+.registro button {
+  background-color: rgb(46, 109, 247);
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 3px;
+  font-size: 18px;
+  cursor: pointer;
+  
+  position: absolute; /* Usamos posición absoluta en el botón */
+  top: -10px; /* Ajusta la posición vertical */
+  left: 300px; 
+}
+
+
+.center-button {
+  position: relative; /* Usamos posición relativa en el contenedor */
+  margin-top: 110px;
+  right: 380px;
+}
+
+.registro button:hover {
+  background-color: #0056b3;
+}
+
+/* Estilos CSS para los combobox */
 .select {
   width: 100%;
   padding: 8px;
