--- a/SCFrontEnd/src/Styles/Campanas.css
+++ b/SCFrontEnd/src/Styles/Campanas.css
@@ -1,102 +1,102 @@
 .form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.campanas {
+  max-width: 700px;
+  margin: 40px 400px 40px;
+  margin-right: 190px;
+  padding: 20px;
+  /*border: 1px solid transparent; */
+  border: 2px solid #1758e694;
+  border-radius: 5px;
+  /*background-color: transparent;*/
+  background-color: #fff;
+ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 0 30px rgba(36, 35, 35, 0.3);
+  cursor: default;
+  transition: all 400ms ease;
+
+  height: 500px; 
+}
+
+.campanas h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.campanas form {
+  display: grid; 
+  grid-template-columns: 1fr 1fr; 
+  grid-gap: 20px; 
   
-  .campanas {
-    max-width: 700px;
-    margin: 40px auto 40px;
-    margin-right: 190px;
-    padding: 20px;
-    /*border: 1px solid transparent; */
-    border: 2px solid #1758e694;
-    border-radius: 5px;
-    /*background-color: transparent;*/
-    background-color: #fff;
-   
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0 0 30px rgba(36, 35, 35, 0.3);
-    cursor: default;
-    transition: all 400ms ease;
+}
+
+.campanas label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.campanas input {
   
-    height: 500px; 
-  }
+      padding: 0; /* Elimina el espacio interno */
+      border: none; /* Elimina el borde */
+      border-bottom: 1px solid #ccc; /* Agrega una línea inferior */
+      background: transparent; /* Fondo transparente */
+      font-size: 15px;
+      width: 90%;
+      height: 30px;
+      outline: none; /* Elimina el contorno al enfocar */
   
-  .campanas h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
+}
+
+
+.campanas button {
+  background-color: rgb(46, 109, 247);
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 3px;
+  font-size: 18px;
+  cursor: pointer;
   
-  .campanas form {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-gap: 20px; 
-    
-  }
-  
-  .campanas label {
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .campanas input {
-    
-        padding: 0; /* Elimina el espacio interno */
-        border: none; /* Elimina el borde */
-        border-bottom: 1px solid #ccc; /* Agrega una línea inferior */
-        background: transparent; /* Fondo transparente */
-        font-size: 15px;
-        width: 90%;
-        height: 30px;
-        outline: none; /* Elimina el contorno al enfocar */
-    
-  }
-  
-  
-  .campanas button {
-    background-color: rgb(46, 109, 247);
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 3px;
-    font-size: 18px;
-    cursor: pointer;
-    
-    position: absolute; /* Usamos posición absoluta en el botón */
-    top: -10px; /* Ajusta la posición vertical */
-    left: 300px; 
-  }
-  
-  
-  .center-buttonn {
-    position: relative; /* Usamos posición relativa en el contenedor */
-    margin-top: 10px;
-    right: 45px;
-  }
-  
-  .campanas button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Estilos CSS para los combobox */
-  .select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: #fff;
-    transition: border-color 0.3s;
-  }
-  
-  /* Estilos CSS para las etiquetas de los combobox */
-  .label {
-    margin-bottom: 8px;
-    font-weight: bold;
-  }
+  position: absolute; /* Usamos posición absoluta en el botón */
+  top: -10px; /* Ajusta la posición vertical */
+  left: 330px; 
+}
+
+
+.center-buttonn {
+  position: relative; /* Usamos posición relativa en el contenedor */
+  margin-top: 10px;
+  right: 45px;
+}
+
+.campanas button:hover {
+  background-color: #0056b3;
+}
+
+/* Estilos CSS para los combobox */
+.select {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #fff;
+  transition: border-color 0.3s;
+}
+
+/* Estilos CSS para las etiquetas de los combobox */
+.label {
+  margin-bottom: 8px;
+  font-weight: bold;
+}
