--- a/SCFrontEnd/src/Styles/CrearTipo.css
+++ b/SCFrontEnd/src/Styles/CrearTipo.css
@@ -8,7 +8,7 @@
   
   .CrearTipo {
     max-width: 700px;
-    margin: 100px auto 40px;
+    margin: 150px 400px 40px;
     margin-right: 190px;
     padding: 20px;
     /*border: 1px solid transparent; */
