--- a/SCFrontEnd/src/Styles/Puntos.css
+++ b/SCFrontEnd/src/Styles/Puntos.css
@@ -7,10 +7,11 @@
   
   /* Estilo para el encabezado de la tabla */
   .tableInteresSostenible th {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    font-weight: bold;
+    background-color: #f2f2f2;
+    color: black;
+    padding: 1px;
+    border: 1px solid #ccc
+    
   }
   
   /* Estilo para las filas pares */
@@ -25,7 +26,7 @@
   
   /* Estilo para las celdas */
   .tableInteresSostenible td {
-    padding: 10px;
+    padding: 1px;
     border: 1px solid #ccc;
   }
   
