--- a/SCFrontEnd/src/Styles/Registro.css
+++ b/SCFrontEnd/src/Styles/Registro.css
@@ -9,7 +9,7 @@
 
 .registro {
   max-width: 700px;
-  margin: 20px auto 40px;
+  margin: 20px 400px 40px;
   margin-right: 190px;
   padding: 20px;
   /*border: 1px solid transparent; */
