--- a/SCFrontEnd/src/Styles/Reservaciones.css
+++ b/SCFrontEnd/src/Styles/Reservaciones.css
@@ -8,7 +8,7 @@
   
   .reservaciones {
     max-width: 700px;
-    margin: 50px auto 40px;
+    margin: 50px 400px 40px;
     margin-right: 190px;
     padding: 20px;
     /*border: 1px solid transparent; */
