--- a/SCFrontEnd/src/Styles/Tablas.css
+++ b/SCFrontEnd/src/Styles/Tablas.css
@@ -1,91 +1,75 @@
-/* .tableVoluntarios{
-    color: black;
-    background-color: white;
-    
+.pagination {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  justify-content: center;
 }
 
-.Div-Table{
-    display: flex;
-    justify-content: center;
-}
-
-.Div-Table {
-    overflow-x: auto; 
-  
-  .TableUsuarios {
-    width: 50%; 
-    border-collapse: collapse; 
-  }
-  
-  .TableUsuarios th,
-  .TableUsuarios td {
-    padding: 8px 12px; 
-    text-align: center; 
-  }
-  
-  .TableUsuarios th {
-    background-color: #333;
-    color: white;
-  }
-  
-  .TableUsuarios td {
-    border: 1px solid #ccc; 
-  }
-  
-
-  @media (max-width: 768px) {
-    .Div-Table {
-      overflow-x: scroll; 
-    }
-  }
-  
-
-.Namelist{
-    display: flex;
-    justify-content: center;
-} */
-
-
-/* 
-.TableUsuarios {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-}
-
-.TableUsuarios th, .TableUsuarios td {
+.pagination li {
+  margin: 0 5px;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 5px 10px;
   border: 1px solid #ccc;
-  padding: 10px;
+  background-color: #fff;
+}
+
+.pagination li.active {
+  background-color: #007bff;
+  color: #fff;
+  border: 1px solid #007bff;
+}
+
+.pagination li:hover {
+  background-color: #007bff;
+  color: #fff;
+  border: 1px solid #007bff;
+}
+
+/* Estilos para el cuadro de confirmación */
+.confirmation-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.confirmation-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
   text-align: center;
 }
 
-.TableUsuarios th {
-  background-color: #f2f2f2;
+.btn-confirm {
+  margin: 5px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
   font-weight: bold;
 }
 
+.btn-yes {
+  background-color: red;
+  color: white;
+}
 
-.btnEliminar, .btnModificar {
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  margin-right: 5px;
-  cursor: pointer;
-} */
+.btn-no {
+  background-color: blue;
+  color: white;
+}
 
 @media (max-width: 768px) {
   .Div-Table {
     overflow-x: scroll; 
   }
-}
-
-.btnModificar {
-  background-color: #007bff;
-}
-
-.btnEliminar:hover, .btnModificar:hover {
-  background-color: #ff3333;
 }
 
 /* Estilos para el encabezado */
@@ -108,41 +92,99 @@
 
 /* ------------------------- */
 
-/* Estilos para la tabla de Reservaciones */
+/* Estilos para la tabla */
 .TableReservaciones {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.TableReservaciones th, .TableReservaciones td {
+.TableReservaciones th,
+.TableReservaciones td {
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 1px;
   text-align: center;
 }
 
 .TableReservaciones th {
   background-color: #f2f2f2;
+}
+
+.TableReservaciones tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+/* Estilos para la paginación */
+.pagination {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  justify-content: center;
+}
+
+.pagination li {
+  margin: 0 5px;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+}
+
+.pagination li.active {
+  background-color: #007bff;
+  color: #fff;
+  border: 1px solid #007bff;
+}
+
+.pagination li:hover {
+  background-color: #007bff;
+  color: #fff;
+  border: 1px solid #007bff;
+}
+
+/* Estilos para el cuadro de confirmación */
+.confirmar-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.confirmar-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.btn-confirm {
+  margin: 5px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
   font-weight: bold;
 }
 
+.btn-yes {
+  background-color: red;
+  color: white;
+}
+
+.btn-no {
+  background-color: blue;
+  color: white;
+}
+
 /* Estilos para los botones de acción */
-.btnEliminar, .btnModificar {
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  margin-right: 5px;
-  cursor: pointer;
-}
 
-.btnModificar {
-  background-color: #007bff;
-}
-
-.btnEliminar:hover, .btnModificar:hover {
-  background-color: #ff3333;
-}
 
 /* Estilos para el encabezado */
 .Namelist {
@@ -185,22 +227,8 @@
 } */
 
 /* Estilos para los botones de acción */
-.btnEliminar, .btnModificar {
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  margin-right: 5px;
-  cursor: pointer;
-}
 
-.btnModificar {
-  background-color: #007bff;
-}
 
-.btnEliminar:hover, .btnModificar:hover {
-  background-color: #ff3333;
-}
 
 /* Estilos para el encabezado */
 .Namelist {
@@ -233,6 +261,7 @@
   border: 1px solid #ccc;
   padding: 10px;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .TableCampaña th {
@@ -241,22 +270,8 @@
 }
 
 /* Estilos para los botones de acción */
-.btnEliminar, .btnModificar {
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  margin-right: 5px;
-  cursor: pointer;
-}
 
-.btnModificar {
-  background-color: #007bff;
-}
 
-.btnEliminar:hover, .btnModificar:hover {
-  background-color: #ff3333;
-}
 
 /* Estilos para el encabezado */
 .Namelist {
@@ -282,17 +297,21 @@
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
+  padding-top: 20px;
+  
 }
 
 .TableUsuarios th,
 .TableUsuarios td {
   border: 1px solid #ccc;
-  padding: 8px;
+  padding: 1px;
   text-align: center;
+  
 }
 
 .TableUsuarios th {
   background-color: #f2f2f2;
+  
 }
 
 .TableUsuarios tr:nth-child(even) {
@@ -380,7 +399,7 @@
 .TableTipo th,
 .TableTipo td {
   border: 1px solid #ccc;
-  padding: 8px;
+  padding: 1px;
   text-align: center;
 }
 
@@ -460,3 +479,93 @@
 .delete-confirm button:hover {
   background-color: #0056b3;
 }
+  /* Estilos para la tabla */
+  .TableVOluntariado {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+
+  .TableVOluntariado th,
+  .TableVOluntariado td {
+    border: 1px solid #ccc;
+    padding: 1px;
+    text-align: center;
+  }
+
+  .TableVOluntariado th {
+    background-color: #f2f2f2;
+  }
+
+  .TableVOluntariado tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  /* Estilos para la paginación */
+  .pagination {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    justify-content: center;
+  }
+
+  .pagination li {
+    margin: 0 5px;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+  }
+
+  .pagination li.active {
+    background-color: #007bff;
+    color: #fff;
+    border: 1px solid #007bff;
+  }
+
+  .pagination li:hover {
+    background-color: #007bff;
+    color: #fff;
+    border: 1px solid #007bff;
+  }
+
+  /* Estilos para el cuadro de confirmación */
+  .confirmation-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+
+  .confirmation-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  .btn-confirm {
+    margin: 5px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+  }
+
+  .btn-yes {
+    background-color: red;
+    color: white;
+  }
+
+  .btn-no {
+    background-color: blue;
+    color: white;
+  }
