--- a/SCFrontEnd/src/Styles/Campanas.css
+++ b/SCFrontEnd/src/Styles/Campanas.css
@@ -80,6 +80,12 @@
   right: 45px;
 }
 
+.btnCancelarTodo{
+  position: relative; /* Usamos posición relativa en el contenedor */
+  margin-top: 10px;
+  right: 30px;
+}
+
 .campanas button:hover {
   background-color: #0056b3;
 }
