--- a/SCFrontEnd/src/Styles/Tablas.css
+++ b/SCFrontEnd/src/Styles/Tablas.css
@@ -306,7 +306,7 @@
   border: 1px solid #ccc;
   padding: 1px;
   text-align: center;
-  
+  margin-top: 20px ;
 }
 
 .TableUsuarios th {
@@ -498,6 +498,98 @@
   }
 
   .TableVOluntariado tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  /* Estilos para la paginación */
+  .pagination {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    justify-content: center;
+  }
+
+  .pagination li {
+    margin: 0 5px;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+  }
+
+  .pagination li.active {
+    background-color: #007bff;
+    color: #fff;
+    border: 1px solid #007bff;
+  }
+
+  .pagination li:hover {
+    background-color: #007bff;
+    color: #fff;
+    border: 1px solid #007bff;
+  }
+
+  /* Estilos para el cuadro de confirmación */
+  .confirmation-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+
+  .confirmation-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  .btn-confirm {
+    margin: 5px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+  }
+
+  .btn-yes {
+    background-color: red;
+    color: white;
+  }
+
+  .btn-no {
+    background-color: blue;
+    color: white;
+  }
+
+  /* Estilos para la tabla */
+  .TableCampaña {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+
+  .TableCampaña th,
+  .TableCampaña td {
+    border: 1px solid #ccc;
+    padding: 1px;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .TableCampaña th {
+    background-color: #f2f2f2;
+  }
+
+  .TableCampaña tr:nth-child(even) {
     background-color: #f2f2f2;
   }
 
